--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <title>TITULO DEL POST</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="Contenedor">
+        <div id="Post">
+             <h1>Este es el titulo del post</h1>
+             <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
+        </div>
+    </div>
 </body>
 </html>
