--- a/blogpost.html
+++ b/blogpost.html
@@ -6,10 +6,13 @@
 </head>
 <body>
     <div id="Contenedor">
-        <div id="Post">
+        <div id="cabecera">
+            Cabecera
+            <div id="Post">
              <h1>Este es el titulo del post</h1>
              <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
-        </div>
+            </div>
+         </div>
     </div>
 </body>
 </html>
