--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
 <body>
     <div id="Contenedor">
         <div id="cabecera">
-            Cabecera
-            <div id="Post">
-             <h1>Este es el titulo del post</h1>
-             <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
-            </div>
-         </div>
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
+        </div>
+        <div id="Post">
+            <h1>Este es el titulo del post</h1>
+            <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
+        </div>
     </div>
 </body>
 </html>
