--- a/blogpost.html
+++ b/blogpost.html
@@ -7,13 +7,15 @@
 <body>
     <div id="Contenedor">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png"/>
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         </div>
-        <div id="Post">
+        <div id="post">
              <h1>Este es el titulo del post</h1>
              <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
              <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a las conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora</p>
+             <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
