--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
              <h1>Este es el titulo del post</h1>
              <p>Y este es el parrafo donde vamos a expicar lo que se puede hacer con html y como se maneja git</p>
              <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a las conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora</p>
+             <p>Suscribete y dale like</p>
+        </div>
+        <div id="footer">
+            Hecho con pasion en platzi &lt;3
         </div>
     </div>
 </body>
